--- a/porcentajes/styles.css
+++ b/porcentajes/styles.css
@@ -24,7 +24,7 @@ body{
     height: 50px;      /*110 porque tiene 20 paddingtop y bottom*/
     float: left;
     background-color: white;
-    padding: 20px;
+    padding: 1.5625%; /*20px*/
 }
 
 .opciones:hover{
@@ -33,7 +33,7 @@ body{
 }
 
 #logo{
-    width: 260px;       /*260 porque tiene 20ppading left y right*/
+    width: 20.3125%;       /*260 porque tiene 20ppading left y right*/
     background-image: url('https://media.istockphoto.com/id/1341681278/vector/two-hands-the-concept-of-protecting-anything-vector-illustration-interconnection.jpg?s=612x612&w=0&k=20&c=QZmkMdTLOVyzaPi-SgvHy0KNa8cC47wl0b3mfPyxsM0=');
     background-repeat: no-repeat;
     background-position: center;
@@ -57,7 +57,7 @@ body{
 
 /*---IMAGEN---*/
 #imagen{
-    width: 300px;
+    width: 23.4375%; /*300px*/
     height: 900px;
     background-image: url('https://images.unsplash.com/photo-1555412654-72a95a495858?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
     background-repeat: no-repeat;
@@ -68,8 +68,8 @@ body{
 
 /*----DATOS FORMULARIO----*/
 #datos{
-    padding: 80px;
-    width: 820px; /*total 980 de 820+80+80*/
+    padding: 6.25%; /*80px*/
+    width: 64.0625%; /*820width+80+80 total 980 de */
     background-color: #BFD9E3;
     height: 740px;
     text-align: center;
@@ -86,69 +86,69 @@ body{
 }
 /*---LABEL---*/
 #labelNombre, #labelDesc, #labelOpciones, #labelDirigido, #labelCategoria{
-    width: 300px;
+    width: 36.5853659%; /*300px de 820px*/
 }
 
 #nombre, #descripcion, #publiopciones, #dirigido, #categoria{
-    width: 466px; /*466 + 4 pixeles de borde total 470*/
+    width: 56.8292683%; /*466 + 4 pixeles de borde total 470*/
     font-size: 1em;
-    margin-left: 50px;
+    margin-left: 6.09756098%; /*50px*/
 }
 
 
 #labelDesc{
     vertical-align: top;        /*para que quede a la misma altura que el textarea*/
-    margin-top: 30px;
+    margin-top: 3.65853659%;   /*30px*/
 }
 
 /*---OPCIONES---*/
 div#publiopciones{
-    margin-top: 30px;
+    margin-top: 3.65853659%; /*30px*/
     display: inline-block;
     text-align: left;
 }
 
-#publicadaNo{
-    margin-left: 100px;     /*Separamos los dos radiobutton*/
+#labelPublicadaNo{
+    margin-left: 21.4592275%;     /* 100px de 466 Separamos los dos radiobutton*/
 }
 
 /*----FECHA INSCRIPCION Y REALIZACION----*/
 
 #inscripcion, #realizacion{
     border: 2px solid black;
-    width: 341px; /*Total 385=381+2borde+2borde+20padding+20padding*/
+    width: 41.5853659%; /*341px Total 385=341+2borde+2borde+20padding+20padding*/
     float: left;
-    padding: 20px;
-    margin-top: 30px;
+    padding: 2.43902439%; /*20px de 820*/
+    margin-top: 3.65853659%;
 }
 
 #inscripcion >h3, #realizacion>h3{
-    width: 230px;
+    width: 67.4486804%; /*230 de 341*/
     text-align: center;
     margin: auto;
 }
 
 #inscripcion label, #realizacion label{
-    width: 130px;
+    width: 38.1231672%;   /*130 de 341*/
 }
 
 #inscripcion input, #realizacion input{
-    margin-top: 20px;
+    margin-top: 5.86510264%;   /*20px de 341*/
     width: 187px; /*Total 191=187+2borde+2borde*/
     text-align: center;
-    margin-left: 20px;
+    margin-left: 5.86510264%;
 }
 
 #realizacion{
-    margin-left: 50px;
+    margin-left: 6.09756098%;  /*50px de 820 */
 }
 
 /*----BOTONES----*/
 
 .boton{
-    width: 230px; /*Total 250=230+10 padding+10 pading*/
-    padding: 10px;
-    margin-top: 60px;
+    width: 28.0487805%; /*230 de 820  Total 250=230+10 padding+10 pading*/
+    padding: 1.2195122%;    /*10 de 820*/
+    margin-top: 7.31707317%;       /*60px de 820*/
     border: 0;
     transition: 0.8s;
 }
@@ -158,7 +158,7 @@ div#publiopciones{
 
 #borrar{
     background-color: #CC6063;
-    margin-right: 25px;
+    margin-right: 3.04878049%; /*25px de 820*/
 }
 
 #borrar:hover{
@@ -167,9 +167,8 @@ div#publiopciones{
 
 #aceptar{
     background-color: #68DEAB;
-    margin-left: 25px;
+    margin-left: 3.04878049%; /*25px de 820*/
 }
-
 #aceptar:hover {
     background-color: #1BE38D;
 }
